--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "@remotelock/react-week-scheduler": "^3.5.8",
     "@tippy.js/react": "^3.1.1",
+    "@types/merge-ranges": "^1.0.0",
     "core-js": "^3.15.2",
     "node-sass": "^6.0.1",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "resize-observer-polyfill": "^1.5.1",
-    "typescript": "3.7.7"
+    "resize-observer-polyfill": "^1.5.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -29,10 +29,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/hammerjs": "^2.0.40",
     "@types/invariant": "^2.2.34",
     "@types/lodash": "^4.14.170",
+    "@types/mousetrap": "^1.6.8",
     "@types/react": "^17.0.13",
     "customize-cra": "^1.0.0",
-    "react-app-rewired": "^2.1.8"
+    "react-app-rewired": "^2.1.8",
+    "typescript": "^3.9.10"
   }
 }
