--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "@tippy.js/react": "^3.1.1",
     "@types/merge-ranges": "^1.0.0",
     "core-js": "^3.15.2",
-    "node-sass": "^6.0.1",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-tippy": "^1.4.0",
     "resize-observer-polyfill": "^1.5.1"
   },
   "scripts": {
@@ -35,7 +35,9 @@
     "@types/mousetrap": "^1.6.8",
     "@types/react": "^17.0.13",
     "customize-cra": "^1.0.0",
+    "node-sass": "^6.0.1",
     "react-app-rewired": "^2.1.8",
+    "sass-loader": "^10.2.0",
     "typescript": "^3.9.10"
   }
 }
