--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@tippy.js/react": "^3.1.1",
     "@types/merge-ranges": "^1.0.0",
     "core-js": "^3.15.2",
+    "patch-package": "^6.4.7",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -17,7 +18,8 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "patch-package"
   },
   "eslintConfig": {
     "extends": "react-app"
